Commit 02-OK: Added devtools in the Project.

--- a/watchlist-3tier-monitoring/pom.xml
+++ b/watchlist-3tier-monitoring/pom.xml
@@ -57,7 +57,12 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<!-- End tags::THYMELEAF -->
-
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		
 		<!-- tags::spring-Swagger2 -->
 		<dependency>
 			<groupId>io.springfox</groupId>
